--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>redux</title>
     <style>
-      select {
+      select,
+      input {
         outline: none;
       }
     </style>
